--- a/docs/api/blockchain/ouis.mdx
+++ b/docs/api/blockchain/ouis.mdx
@@ -136,9 +136,7 @@ _Query Parameters_
       "oui": 1,
       "nonce": 0,
       "block": 762430,
-      "addresses": [
-        "112qB3YaH5bZkCnKA5uRH7tBtGNv2Y5B4smv1jsmvGUzgKT71QpE"
-      ]
+      "addresses": ["112qB3YaH5bZkCnKA5uRH7tBtGNv2Y5B4smv1jsmvGUzgKT71QpE"]
     }
   ]
 }
