--- a/docs/api/blockchain/rewards.mdx
+++ b/docs/api/blockchain/rewards.mdx
@@ -29,8 +29,8 @@ bucketed by time. Valid bucket values include `hour`, `day` and `week`).
 For example to get the last 7 days of rewards bucketed by day use the following
 path/parameters: `?min_time=-7%20day&bucket=day`
 
-The block that contains the `max_time` timestamp is
-**excluded** from the result.
+The block that contains the `max_time` timestamp is **excluded** from the
+result.
 
 <Tabs
   block={true}
@@ -40,11 +40,11 @@ The block that contains the `max_time` timestamp is
 
 _Query Parameters_
 
-| param               | Type     | Note                                   |
-| ------------------- | -------- | -------------------------------------- |
-| min_time (required) | _string_ | First time to include rewards for      |
-| max_time (required) | _string_ | Last time to include rewards for       |
-| bucket (optional)   | _string_ | Bucket specifier                       |
+| param               | Type     | Note                              |
+| ------------------- | -------- | --------------------------------- |
+| min_time (required) | _string_ | First time to include rewards for |
+| max_time (required) | _string_ | Last time to include rewards for  |
+| bucket (optional)   | _string_ | Bucket specifier                  |
 
 </TabItem>
 <TabItem value="response">
