--- a/docs/api/home.mdx
+++ b/docs/api/home.mdx
@@ -8,5 +8,7 @@ slug: /api
 
 The Helium Network currently exposes the following APIs:
 
-* [Blockchain API](/api/blockchain/introduction) - Access real-time and historical data from the helium blockchain. 
-* [Console API](/api/console) - Provides programatic access to your organization's sensor data on [console.helium.com](https://console.helium.com)
+- [Blockchain API](/api/blockchain/introduction) - Access real-time and
+  historical data from the helium blockchain.
+- [Console API](/api/console) - Provides programatic access to your
+  organization's sensor data on [console.helium.com](https://console.helium.com)
