--- a/docs/api/blockchain/dc-burns.mdx
+++ b/docs/api/blockchain/dc-burns.mdx
@@ -27,12 +27,12 @@ parameter which buckets information per bucket in the given timeframe. Data is
 bucketed by time. Valid bucket values include `hour`, `day` and `week`).
 
 For example to get the last 7 days of DC burns bucketed by day use the following
-path/parameters: 
+path/parameters:
 
 `?min_time=-7%20day&bucket=day`
 
-The block that contains the `max_time` timestamp is
-**excluded** from the result.
+The block that contains the `max_time` timestamp is **excluded** from the
+result.
 
 <Tabs
   block={true}
@@ -159,10 +159,10 @@ Return the current DC burn stats
 GET https://api.helium.io/v1/dc_burns
 ```
 
-Use this API to list DC burn events. Events include a block, amount, type of burn, and the
-address of the account the DC were burned out of. The oracle price that was
-active at the point the DC burn happened is also listed to enable calculating
-how much HNT the burned DC represents.
+Use this API to list DC burn events. Events include a block, amount, type of
+burn, and the address of the account the DC were burned out of. The oracle price
+that was active at the point the DC burn happened is also listed to enable
+calculating how much HNT the burned DC represents.
 
 Note that this route does _not_ return the implicit HNT to DC conversion that
 happens when an account does not have enough DC available for a given
